--- a/index.html
+++ b/index.html
@@ -29,17 +29,59 @@
       <section>
 
         <article>
-          火jdlsfrmklfk；場jflmd；b
+          <h1>Juicy Stove Top Chicken Breasts Recipe</h1>
+
+          <P>
+            One of my favorite chicken breast recipes & the
+            easiest way to make juicy chicken right on the
+            stove top. These pan-seared chicken breasts
+            are exploding with flavor!
+          </P>
+          <h4>brあり</h4>
+          <P>
+            本文｜適当に文章を書いて下さい。<br>
+            本文｜適当に文章を書いて下さい。<br>
+          </P>
         </article>
 
         <article>
-          article 02
+          <h1>HOW TO COOK CHICKEN BREASTS ON THE STOVE</h1>
+        
+          <ul>
+            <li>Start with a simple seasoning on both sides
+              of the chicken breasts; grease the chicken breasts
+              with cooking spray or oil, then season with salt,
+              fresh ground pepper, onion powder, garlic powder,
+              paprika and dried basil. This dry mix of herbs and
+              spices adds a wonderful zing and flavor to the
+              chicken breasts.</li>
+            <li>In the meantime, heat up vegetable oil or
+              canola oil in a large skillet. </li>
+
+            <li>When oil is hot, add chicken breasts to the pan – cook two
+               chicken breasts at a time because you don’t want to overcrowd
+                your skillet. </li>
+
+            <li>Cook chicken breasts for 5 to 7 minutes without moving
+              them around. </li>
+
+          </ul>
+          <h4>OL：Ordered List</h4>
+          <ol>
+            <li>項目1</li>
+            <li>項目2</li>
+            <li>項目3</li>
+          </ol>
         </article>
 
       </section>
 
       <aside>
-        aside
+        <h1>関連リンク</h1>
+        <ul>
+          <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
+          <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
+        </ul>
       </aside>
 
     </main>
