--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <article>
           <h1>HOW TO COOK CHICKEN BREASTS ON THE STOVE</h1>
-        
+
           <ul>
             <li>Start with a simple seasoning on both sides
               of the chicken breasts; grease the chicken breasts
@@ -72,6 +72,55 @@
             <li>項目2</li>
             <li>項目3</li>
           </ol>
+        </article>
+
+        <article>
+          <h1>Sample Video</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/watch?v=erb0fSJhLbQ"
+        </article>
+
+        <article>
+          <h1>Sample Image</h1>
+          <img src="01.jpg" alt="李饼" width="200" height="100" >
+          <img src="02.jpg" alt="大理寺" width="200" height="100" >
+          <img src="03.jpg" alt="长安" width="200" height="100" >
+        </article>
+
+
+        <article>
+          <h1>表組み</h1>
+  <table  border="1" rules="all">
+      <thead>
+           <tr>
+                <th>商品</th>
+                <th>価格</th>
+           </tr>
+      </thead>
+      <tfoot>
+           <tr>
+                <td>合計金額</td>
+                <td>250円</td>
+           </tr>
+      </tfoot>
+      <tbody>
+           <tr>
+                <td>鉛筆</td>
+                <td>150円</td>
+           </tr>
+           <tr>
+                <td>消しゴム</td>
+                <td>100円</td>
+           </tr>
+      </tbody>
+  </table>
+        </article>
+
+        <article>
+          <h1>Sample Form</h1>
+          <form action="http://www.google.com/search" method="get">
+            <alibaba >Google: </alibaba>
+            <input type="search" name="q">
+          </form>
         </article>
 
       </section>
