--- a/index.html
+++ b/index.html
@@ -76,14 +76,20 @@
 
         <article>
           <h1>Sample Video</h1>
-          <iframe width="560" height="315" src="https://www.youtube.com/watch?v=erb0fSJhLbQ"
+          <iframe width="560" height="315"
+          src="https://www.youtube.com/watch?v=xasKnR95r4g" frameborder="0"
+          allow="accelerometer; autoplay;
+              encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+          </iframe>
         </article>
+
 
         <article>
           <h1>Sample Image</h1>
-          <img src="01.jpg" alt="李饼" width="200" height="100" >
-          <img src="02.jpg" alt="大理寺" width="200" height="100" >
-          <img src="03.jpg" alt="长安" width="200" height="100" >
+          <img src="01.jpg" alt="li" width="200" height="100" >
+          <img src="02.jpg" alt="da" width="200" height="100" >
+          <img src="03.jpg" alt="chang" width="200" height="100" >
         </article>
 
 
@@ -118,7 +124,7 @@
         <article>
           <h1>Sample Form</h1>
           <form action="http://www.google.com/search" method="get">
-            <alibaba >Google: </alibaba>
+            <label>Google: </label>
             <input type="search" name="q">
           </form>
         </article>
