--- a/index.html
+++ b/index.html
@@ -75,21 +75,22 @@
         </article>
 
         <article>
-          <h1>Sample Video</h1>
           <iframe width="560" height="315"
-          src="https://www.youtube.com/watch?v=xasKnR95r4g" frameborder="0"
+          src="https://www.youtube.com/embed/f_ZrW78qr0A" frameborder="0"
           allow="accelerometer; autoplay;
               encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-          </iframe>
+              allowfullscreen>
+            </iframe>
         </article>
 
 
         <article>
+
           <h1>Sample Image</h1>
-          <img src="01.jpg" alt="li" width="200" height="100" >
-          <img src="02.jpg" alt="da" width="200" height="100" >
-          <img src="03.jpg" alt="chang" width="200" height="100" >
+          <img src="images/01.jpg" width="297" height="170" alt="サンプル">
+          <img src="images/02.jpg" width="298" height="169" alt="サンプル">
+          <img src="images/03.jpg" width="265" height="190" alt="サンプル">
+
         </article>
 
 
