--- a/index.html
+++ b/index.html
@@ -49,18 +49,11 @@
 
           <ul>
             <li>Start with a simple seasoning on both sides
-              of the chicken breasts; grease the chicken breasts
-              with cooking spray or oil, then season with salt,
-              fresh ground pepper, onion powder, garlic powder,
-              paprika and dried basil. This dry mix of herbs and
-              spices adds a wonderful zing and flavor to the
-              chicken breasts.</li>
-            <li>In the meantime, heat up vegetable oil or
+              of the chicken breasts</li>
+            <li>heat up vegetable oil or
               canola oil in a large skillet. </li>
 
-            <li>When oil is hot, add chicken breasts to the pan – cook two
-               chicken breasts at a time because you don’t want to overcrowd
-                your skillet. </li>
+            <li>When oil is hot, add chicken breasts to the pan </li>
 
             <li>Cook chicken breasts for 5 to 7 minutes without moving
               them around. </li>
@@ -87,43 +80,52 @@
         <article>
 
           <h1>Sample Image</h1>
-          <img src="images/01.jpg" width="297" height="170" alt="サンプル">
-          <img src="images/02.jpg" width="298" height="169" alt="サンプル">
-          <img src="images/03.jpg" width="265" height="190" alt="サンプル">
+          <img src="images/01.jpg" width="200" height="100" alt="李饼">
+          <img src="images/02.jpg" width="200" height="100" alt="大理寺">
+          <img src="images/03.jpg" width="200" height="100" alt="长安">
+          <img src="images/01.jpg" width="200" height="100" alt="李饼">
 
         </article>
 
 
         <article>
-          <h1>表組み</h1>
-  <table  border="1" rules="all">
-      <thead>
-           <tr>
-                <th>商品</th>
-                <th>価格</th>
-           </tr>
-      </thead>
-      <tfoot>
-           <tr>
-                <td>合計金額</td>
-                <td>250円</td>
-           </tr>
-      </tfoot>
-      <tbody>
-           <tr>
-                <td>鉛筆</td>
-                <td>150円</td>
-           </tr>
-           <tr>
+          <h1>文房具リスト</h1>
+            <table  border="1" rules="all">
+
+            <thead>
+              <tr>
+                  <th>商品</th>
+                  <th>価格</th>
+              </tr>
+            </thead>
+
+           <tfoot>
+              <tr>
+                  <td>合計金額</td>
+                  <td>550円</td>
+              </tr>
+           </tfoot>
+
+           <tbody>
+             <tr>
+                 <td>鉛筆</td>
+                 <td>150円</td>
+               </tr>
+            <tr>
                 <td>消しゴム</td>
                 <td>100円</td>
-           </tr>
-      </tbody>
-  </table>
+            </tr>
+            <tr>
+                <td>ナイフ</td>
+                <td>300円</td>
+            </tr>
+          </tbody>
+
+        </table>
         </article>
 
         <article>
-          <h1>Sample Form</h1>
+          <h1>WHAT U WANT SEARCH</h1>
           <form action="http://www.google.com/search" method="get">
             <label>Google: </label>
             <input type="search" name="q">
