--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <article>
 
-          <h1>THE Image FROM 大理寺日志</h1>
+          <h1>THE IMAGE FROM 大理寺日志</h1>
           <img src="images/01.jpg" width="200" height="100" alt="李饼">
           <img src="images/02.jpg" width="200" height="100" alt="大理寺">
           <img src="images/03.jpg" width="200" height="100" alt="长安">
