--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section>
 
         <article>
-          <h1>Juicy Stove Top Chicken Breasts Recipe</h1>
+          <h1>Recipe</h1>
 
           <P>
             One of my favorite chicken breast recipes & the
@@ -37,10 +37,10 @@
             stove top. These pan-seared chicken breasts
             are exploding with flavor!
           </P>
-          <h4>brあり</h4>
+          <h4>WHAT U NEED</h4>
           <P>
-            本文｜適当に文章を書いて下さい。<br>
-            本文｜適当に文章を書いて下さい。<br>
+            Chicken｜any<br>
+            Stove｜any<br>
           </P>
         </article>
 
