--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
         <article>
 
           <h1>THE IMAGE FROM 大理寺日志</h1>
-          <img src="images/01.jpg" width="200" height="100" alt="李饼">
-          <img src="images/02.jpg" width="200" height="100" alt="大理寺">
-          <img src="images/03.jpg" width="200" height="100" alt="长安">
-          <img src="images/01.jpg" width="200" height="100" alt="李饼">
+          <img src="images/01.jpg" alt="李饼">
+          <img src="images/02.jpg" alt="大理寺">
+          <img src="images/03.jpg" alt="长安">          
 
         </article>
 
